--- a/render.yaml
+++ b/render.yaml
@@ -4,11 +4,11 @@ services:
     env: python
     region: oregon
     plan: free
-    buildCommand: pip install -r api/requirements.txt
+    buildCommand: pip install -U pip && pip install -r api/requirements.txt
     startCommand: python -m uvicorn api.main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.0
+        value: 3.11.0
       - key: SUPABASE_URL
         sync: false
       - key: SUPABASE_SERVICE_KEY
