--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
-    "radix-ui": "^1.4.3",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
